--- a/index.qmd
+++ b/index.qmd
@@ -14,7 +14,25 @@ about:
 ---
 
 
-Hello my name is and welcome to my page 
+Hello my name is **Hala Arar**!! Welcome to my Portfolio!
 
 
+You will find: 
 
+- Educational background (link to)
+- Technical Projects (link to)
+- Work Experience (link to)
+- Extracurriculars
+- Resume 
+
+Thank you so much for your interest in me! I look forward to discussing any of this with you and how it relates to your goals! 
+
+
+Please contact me via the following: 
+
+- phone number: 705-977-6821
+- Email: halaosama92@yahoo.com
+
+Or check out the following: 
+- Linkedin link: 
+- Github link
