--- a/Extracurriculars.qmd
+++ b/Extracurriculars.qmd
@@ -1,8 +1,37 @@
 
 
-# Personal Interest 
+# About Me; 
 
-## Weight Lifting 
+I was born and raised in Saudi Arabia and moved to cancada when I was 11 years old! I lived in Ottawa for a year year and then moved to Peteroborough, ON where I completed my middle school and highschool education at Crestwood Secondary school and my undergraduate degree at Trent University. I moved to Vancouver to complete my master's in data science in August 2025! I love vancouver so far and enjoying all that comes with the beautiful weather and the mountains. I can speak English and Arabic fluently! I have a lot of interests and hobbies outside of data science and health care!
 
 
-## 
+# Personal Interests: 
+
+## Ski!
+
+I love to ski! I have been skiing since I was 13! I joined a ski club in highschool and even dabbled in a season of ski racing. I got the pleasure of skiing at mont tremblant, blue mountain and other resorts all over canada! Since I moved to vancouver, I only skiid in Cypress but I look for ward to skiing other mountains here. 
+
+pics to add to prove that i ski
+
+
+## Weight lifting
+
+I've always been passionate about being and staying strong and healthy! I started weight lifting in my first year o fmy underrad and fell in love with it! more info about weightlifting
+
+## Reading 
+
+My whoe life I grew up getting lost in other worlds. I've always loved to read non fiction and the likes. etc etc 
+
+## Sewing 
+
+In highschool I took a sewing course where I creaated several projects - a pencil case, a pillow case, and other projects! Since then, I have dabvled in knitting, crocheting and I even invested in my own sewing machine. But lately I've been busy fixing up my teenage singlings clothes to complete my own proejcts. 
+
+
+## Fishing 
+
+One summer I decided to work for a fishing and hunting camp! This was completely out of my confort zone since I've always been a city girl and didn't really dabble in fishing or gun shooting. I was even the manager - responsible for teaching others how to do the folloiwng. Although ti was compeltely out of my comfort zone - I fell in love with it! I even got to catch the biggest fish in the pond 
+
+insert photo here
+
+
+other stuff? 
