--- a/index.qmd
+++ b/index.qmd
@@ -11,28 +11,32 @@ about:
       text: Github
       href: https://github.com/halaarar
 
+
+
 ---
 
+Welcome to My Website
+Hi, I'm Hala Arar!
+📊 Data Science Enthusiast | 🧬 Biomedical Sciences Graduate | 💡 Curious Problem Solver
 
-Hello my name is **Hala Arar**!! Welcome to my Portfolio!
+Welcome to my personal website! I'm currently a Master of Data Science student at UBC, where I’m honing my skills in machine learning, data analytics, and statistical modeling. My academic background in biomedical sciences with a minor in mathematics has given me an interdisciplinary approach to problem-solving—especially in healthcare, finance, and technology.
 
+I’m passionate about turning data into impactful insights and leveraging AI and machine learning to solve real-world challenges. Whether it’s predicting customer behavior, analyzing healthcare trends, or optimizing financial models, I love applying data-driven solutions to complex problems.
 
-You will find: 
+What You'll Find Here
+🧑‍🎓 Education: My academic journey, key courses, and why I love data science.
+📂 Projects: A showcase of the data-driven projects I’ve worked on, including predictive modeling, machine learning applications, and interactive dashboards.
+💼 Work Experience: Insights from my professional and research roles, from healthcare to data analytics.
+🏆 Extracurriculars: Beyond data science, I love skiing, badminton, weightlifting, investing, and creative pursuits like sewing and baking.
+📄 Resume: A detailed look at my skills, work experience, and qualifications.
 
-- Educational background (link to)
-- Technical Projects (link to)
-- Work Experience (link to)
-- Extracurriculars
-- Resume 
+A Little More About Me
+I was born and raised in Saudi Arabia, moved to Canada at 11, and have lived in Ottawa, Peterborough, and now Vancouver! When I’m not analyzing data, you’ll probably find me on a ski slope, in the gym, experimenting with new recipes, or exploring investment strategies.
 
-Thank you so much for your interest in me! I look forward to discussing any of this with you and how it relates to your goals! 
+Let’s Connect!
+Feel free to reach out—I'd love to chat about data science, AI, finance, or just life in general!
 
+📧 Email: halaosama92@yahoo.com
+🔗 LinkedIn: linkedin.com/in/hala-arar
+🐙 GitHub: github.com/halaarar
 
-Please contact me via the following: 
-
-- phone number: 705-977-6821
-- Email: halaosama92@yahoo.com
-
-Or check out the following: 
-- Linkedin link: 
-- Github link
